--- a/index.html
+++ b/index.html
@@ -56,6 +56,56 @@
         </div>
       </section>
       <!-- End Section 2 -->
+      <!-- Section 3 -->
+      <section class="section-3">
+        <h1 class="section-heading">Gallery</h1>
+        <div class="gallery">
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-1.jpg" class="gallery-img" />
+            <h3 class="food-name">Pancakes</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-2.jpg" class="gallery-img" />
+            <h3 class="food-name">Cupcakes</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-3.jpg" class="gallery-img" />
+            <h3 class="food-name">Hummus</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-4.jpg" class="gallery-img" />
+            <h3 class="food-name">Hamburger</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor amet consectetur adipisicing elit. Beatae,
+              excepturi. Lorem lore.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-5.jpg" class="gallery-img" />
+            <h3 class="food-name">Pancakes</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order now">
+            <img src="images/gallery-img-6.jpg" class="gallery-img" />
+            <h3 class="food-name">Vagetable</h3>
+            <p class="gallery-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            </p>
+          </a>
+        </div>
+      </section>
+      <!-- End of Section 3 -->
     </div>
 
     <script src="script.js"></script>
